@@ -1,17 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST dm-core-0.9.7.gem 147968 RMD160 f0ce2f1f0aefc04a5430aaf9b95e4ee17ddea3b0 SHA1 13cff8daa684ceb49e864716529d91ab26ac6b6a SHA256 7b686e8339a36d5a728c3d1eb5e5a23d58e101deef9e0aac46392a99f9d2fee1
-DIST dm-core-1.0.0.gem 181248 RMD160 d7ebd4ac733d02c2a9a7f49eb161dd2376edf52a SHA1 1ebef9185303ba98f82f7afe9391ed4cd4fd6514 SHA256 afcc050379bc6e7f93fb1ae28e0bcfb535f6b70223b3ea435ca310c29019cecb
-EBUILD dm-core-0.9.7-r1.ebuild 729 RMD160 e655ae173e72f021c087128a88f63700a353b8bd SHA1 96d2414d30b4d703ca099ea661e4cbd8b25a1326 SHA256 ee1055eef3ace965f6a21a829802e1d5ce775e4ce6ae6fa4c45973c833220c8e
-EBUILD dm-core-0.9.7.ebuild 414 RMD160 ec5c3a16d01d046d74db288de4527e9ece7101d1 SHA1 1ef38cd603a170a28b8a39c953fdd658adab81a6 SHA256 79a881eee323c5af1ad972a747d8e4596bde792d6e71fc0158b2f971265c0560
-EBUILD dm-core-1.0.0.ebuild 781 RMD160 5c363552e0396236d9eddae33a4035214f286e51 SHA1 aea295fc19f8d42405785c45e60db3c8b7b775ff SHA256 38be0f643b6cfcadd640c3fa0a286ff298d6a0986c5e8a7f05ed2ff2de3a83e2
-MISC ChangeLog 560 RMD160 0b5b497b188dfb6996abcf96c3f0a746ef011204 SHA1 66cf37beb1fa30ca81277c4fcfaeeb4af0e7fedf SHA256 d34d6d5e9e3fb285343dab9b83cf6aa052049a2919f6d91ae8f8099c114a3b1f
-MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+DIST dm-core-1.0.0.gem 181248 SHA256 afcc050379bc6e7f93fb1ae28e0bcfb535f6b70223b3ea435ca310c29019cecb SHA512 fc8986fc2f26dc370299d49f920a21c2246ad7e5bfc6f863c3dfc89b734c867cb9f879d5471f258f8c9878edfcfe16baf660110a25956bf6aeb41986561c8ecf WHIRLPOOL c727cbedf1a69b710c5b8ce171587af7d3e9b60ba800aced6cbc847e1824feab29406514df327f9ef9c7d94e7892ee3a5e346f1fe2c58ee8f9f67b0f9e033755
+EBUILD dm-core-1.0.0.ebuild 781 SHA256 38be0f643b6cfcadd640c3fa0a286ff298d6a0986c5e8a7f05ed2ff2de3a83e2 SHA512 4f61ab3fb3c7d3fb39671ed80af14104c17704373dbbc59697539c73ec31347ac534cea790b60b4d1486bc14b17340551ed109252b64457f9ad80084640f2326 WHIRLPOOL 5f863760de498edc656977333d060fe41a77fd850fdf7662126c0e8d1d0aab20cd8a262936b720b2337716d0463fd4030b11e5490679084b9315b6854bbe6c84
+MISC ChangeLog 673 SHA256 f702eff40729a0658c1c1ea670238f61c73d46c84c1731fe5b2609752a28c68f SHA512 51bd2780d7dd4ffb243cc27cfe01ff1b786ed94d130b989929d04e0e99ffb8908132be5e2830ede8d3ff8734e0ab0600b439ae3b12cdc5339f255d1b0169e709 WHIRLPOOL ca5e987d86a758902ac8b719ae29567408299551b7cf5433d037a08be16a981e79badd149d8821cebc6112e1332f165907783fe3ca1402e547067e9b90c8d777
+MISC metadata.xml 159 SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679 SHA512 39d857a527ff3a066b0fa7a6e57f789e60178ca13c5ddaa93802b58ec8d45f47418c2ce85c389e2eed619216aca72d761651efa5a401d84357df9b24b478b3fb WHIRLPOOL ddb2c776f81935d41c9e81592c1ddbabc4f94422f44bab6e312730aa541994234a2405ea5ba2782818404a730be20dc53c9cc205efbf8f0843bd21cf839b0980
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAkxnofcACgkQZihJkut28St0tQEAigfn6vON+qnYCkwncOFIRy8l
-IZ//qGp5jDuRylxJu/QBAKo2tq1yBwjcWzGl7B0FyRJxTuvsmul4pP8TrOWXtpkv
-=ZoaB
+iF4EAREIAAYFAlGrCmoACgkQiIP6VqMIqNfgawD/dhmH04kk9ZG3PBdYod5XNy2J
+mYTzLYQWCl9I0QUrbuMBAJcmtz4jpxfqnlG1isE6WbEtb9K3zjMOZcvcK//bunaO
+=yOIq
 -----END PGP SIGNATURE-----
