@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/dm-core
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jun 2013; Hans de Graaff <graaff@gentoo.org> -dm-core-0.9.7.ebuild,
+  -dm-core-0.9.7-r1.ebuild:
+  Cleanup.
 
 *dm-core-1.0.0 (15 Aug 2010)
 
